# Librum

./: .gitmodules
src/: CMakeLists.txt  application_init.cpp  application_init.h  global_controllers.cpp  global_controllers.h  main.cpp
src/presentation/forgotPasswordPage/: MForgotPasswordPage.qml
src/presentation/loginPage/: MLoginPage.qml
src/presentation/modules/CustomComponents/: MLabeledInputBox.qml
src/presentation/registerPage/: MRegisterPage.qml
src/presentation/settings/: MAppearancePage.qml
src/presentation/settings/settingsSidebar/: MSettingsSidebar.qml
src/presentation/sidebar/: MSidebar.qml
tests/: CMakeLists.txt
tests/gui_tests/: CMakeLists.txt  tst_guitests.cpp
tests/gui_tests/catch_login/: CMakeLists.txt  TestFixture.cpp  TestFixture.h  macros.h  test_example.cpp  test_invalid_credentials.cpp  test_main.cpp
tests/gui_tests/demo_catch2_tests/: CMakeLists.txt  macros.h  test_invalid_credentials.cpp  test_settings.cpp
tests/gui_tests/demo_qtest_tests/: CMakeLists.txt
tests/gui_tests/interaction/: CMakeLists.txt  tst_failed_login.cpp  tst_guitests.cpp
tests/gui_tests/navigation/: CMakeLists.txt  tst_navigation.cpp
